[package]
name = "pqgch-router"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5"
socket2 = "0.6.0"

[profile.release]
opt-level = "z"     
lto = true          
codegen-units = 1   
strip = "symbols"